# bulletroboy

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
bulletroboy/: cage_simulation.py  constants.py  environment_control.py  exoforce.py  exoforce_hardware.py  exoforce_simulation.py  force_decomposition.py  forces_imitator.py  forces_mapper.py  link_mapping.py  links_mapper.py  msg_publisher.py  operator.py  operator_cage.py  operator_file.py  operator_simulation.py  optimization.py  retargeting.py  roboy.py  roboy_simulation.py  ros2_roboy.py  test_client.py  test_publisher.py  topics.py  utils.py
bulletroboy/exoforce/: exoforce.py  exoforce_hardware.py  exoforce_simulation.py
bulletroboy/force_control/: force_control.py
config/: Optimization_Config.yaml  attachment_points_Nelder-Mead_test_1.yaml  cageConfiguration.xml  conf.yaml  force_test.yaml  realCageConfiguration.xml  saved_joint_states.yaml  state_mapper.yaml  trajectory.yaml
install/: local_setup.sh  setup.sh
launch/: cage_sim.launch.py  exoforce.launch.py
log/: latest_build
msg/: Collision.msg
resource/: operator_link_standard_dimentions.yaml  roboy_to_human_linkname_map.yaml
src/: cage_interaction.py  cage_simulation.py  conf.yml  cube.urdf  environment_control.py  exoforce.py  forces_imitator.py  humanoid_manual_control.py  ik.py  kinematic_test.py  logger.py  model_export_test.py  movement.py  simulation_for_video.py  tcp_test.py  upper_body.py  xml_handler.py
srv/: HumanLinkIdFromName.srv  RobotLinkNameFromId.srv
(+31 files in other folders)
