<?xml version="1.0"?>
<package format="3">
  <name>bulletroboy</name>
  <version>0.0.1</version>
  <description>The bulletroboy package</description>
  <maintainer email="roboy@todo.todo">roboy</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD-3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roboy_simulation_msgs</depend>

  <export>
    <build_type>ament_python</build_type>

  </export>
</package>
