<?xml version="1.0"?>
<package format="3">
  <name>bulletroboy</name>
  <version>0.0.1</version>
  <description>The bulletroboy package</description>
  <maintainer email="roboy@todo.todo">roboy</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roboy_control_msgs</depend>
  <depend>roboy_simulation_msgs</depend>

  <export>
    <build_type>ament_python</build_type>

  </export>
</package>
